--- a/ui/clockform.ui
+++ b/ui/clockform.ui
@@ -12,7 +12,7 @@
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="4" column="0" colspan="3">
+   <item row="5" column="0" colspan="2">
     <widget class="QLCDNumber" name="systemTime">
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
@@ -25,7 +25,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="3">
+   <item row="3" column="0" colspan="2">
     <widget class="QLCDNumber" name="gpsTime">
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
@@ -38,43 +38,29 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="3">
-    <widget class="QLineEdit" name="sysTZ">
-     <property name="focusPolicy">
-      <enum>Qt::NoFocus</enum>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="0" colspan="3">
-    <widget class="QPushButton" name="setTZ">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
+   <item row="2" column="0">
     <widget class="QLineEdit" name="lineEdit">
      <property name="text">
-      <string>GPS: UTC</string>
+      <string>GPS clock, UTC</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="sync">
+   <item row="4" column="0">
+    <widget class="QLineEdit" name="lineEdit_2">
      <property name="text">
-      <string>Sync</string>
+      <string>System clock, local time</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
